# model_metamers_pytorch

./: .gitignore  README.md  build_network.py  download_large_files.py  environment.yml  feather_metamers_conda_2022.yml  pckl_viewer.py  pyproject.toml  requirements.txt
AuditoryBehavioralExperiments/: example_audio_turk_javascript.html
VisionBehavioralExperiments/: example_vision_turk_javascript.html
analysis_scripts/: __init__.py  benchmark_feature_extractor.ipynb  benchmark_steps.ipynb  default_paths.py  eval_adv_imagenet_with_robustness_lib.py  eval_natural_imagenet.py  eval_natural_jsinv3.py  experiments.py  helpers_16_choice.py  imagenet_16_categories_validation_paths.py  imagenet_network_network_comparisons.py  input_helpers.py  jsinv3_word_network_network_comparisons.py  make_metamers_imagenet_16_category_val_400_only_save_metamer_layers.py  make_metamers_minimal.py  make_metamers_wsj400_behavior_only_save_metamer_layers.py  make_null_distributions.py  measure_layer_activations_165_natural_sounds_pytorch.py  network_network_helpers.py  optimization_analysis_scripts.py  replication.py  run_regressions_all_voxels_om_natsounddata.py  voxel_regression_functions.py
model_analysis_folders/: README.md  all_model_info.py  color_model_info.py
notebooks/: 2022_10_26_Metamers_Paper_Brainscore_Model_Tracking.csv  AllExperimentsHumanRecognition.ipynb  BrainscoreResultsVsMetamerRecognition.ipynb  VisualExperimentsViewMetamers.ipynb  VisualNetworkNetworkPredictions.ipynb  aud_fmri_notebook_helpers.py  fMRIBestLayerVsMetamerRecognition.ipynb  notebook_helpers.py  (+1 more)
(+146 files in other folders)
