[tool.poetry]
name = "model-metamers-pytorch"
version = "0.1.0"
description = "code from the paper"
authors = ["Janelle Feather"]
readme = "README.md"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
scipy = "^1.4"
matplotlib = "^3.1"
numpy = "*"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
#torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"

[tool.poetry.dev-dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
